  
  From Mats Wichmann:
    - Improve finding of Microsoft compiler: add a 'products' wildcard
      in case 2017 Build Tools only is installed as it is considered a separate
      product from the default Visual Studio

  From Daniel Moody:
    - Improved support for VC14.1 and Visual Studio 2017, as well as arm and arm64 targets.
    - Update TempFileMunge class to use PRINT_CMD_LINE_FUNC

RELEASE 3.0.3 - Mon, 07 Jan 2019 20:05:22 -0400
  NOTE: 3.0.2 release was dropped because there was a packaging bug. Please consider all 3.0.2
        content.

  From William Deegan:
    - Fixes to packaging logic.  Ensuring the SCons.Tool.clangCommon module is added
      to the release packages.
    - Modify scons.bat script to check for scons python script without .py extension if no file
      scons.py exists. This enables an all platform wheel to work.

  From Mats Wichmann:
    - Update doc examples to work with Python 3.5+:  map() now returns an iterable instead of a list.


RELEASE 3.0.2 - Mon, 31 Dec 2018 16:00:12 -0700

  From Bernard Blackham:
    - Fixed handling of side-effects in task master (fixes #3013).

  From William Deegan:
    - Remove long deprecated SCons.Options code and tests.  This removes BoolOption,EnumOption,
      ListOption,PackageOption, and PathOption which have been replaced by *Variable() many years ago.
    - Re-Enable parallel SCons (-j) when running via Pypy
    - Move SCons test framework files to testing/framework and remove all references to QMtest.
      QMTest has not been used by SCons for some time now.
    - Updated logic for mingw and clang on win32 to search default tool install paths if not
      found in normal SCons PATH.  If the user specifies PATH or tool specific paths they
      will be used and the default paths below will be ignored.
      - Default path for clang/clangxx : C:\Program Files\LLVM\bin
      - Default path for mingw         : C:\MinGW\bin and/or  C:\mingw-w64\*\mingw64\bin